# fsmanager

./: .gitignore  Cargo.toml  DESIGN.md  README.md  RUNNING.md  build-release.bat
apps/fsm-desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
apps/fsm-desktop/src/: App.tsx  api.ts  dragState.ts  index.html  main.js  main.tsx  styles.css
apps/fsm-desktop/src-tauri/: Cargo.toml  installer.conf.json  tauri.conf.json
apps/fsm-desktop/src-tauri/src/: lib.rs  main.rs
apps/fsm-desktop/src/components/: BatchBar.module.css  BatchBar.tsx  FileTable.module.css  FileTable.tsx  ManageModal.module.css  ManageModal.tsx  Mounted.tsx  Progress.module.css  Progress.tsx  SearchView.module.css  SearchView.tsx  SnapshotPanel.module.css  SnapshotPanel.tsx  StatsBar.module.css  StatsBar.tsx  Toolbar.module.css  Toolbar.tsx  Topbar.module.css  Topbar.tsx  Welcome.tsx  Workspace.module.css  Workspace.tsx
apps/fsm-desktop/src/contexts/: ContextMenu.module.css  ContextMenuContext.tsx  Toast.module.css  ToastContext.tsx
apps/fsm-desktop/src/styles/: global.css
crates/fsm-cli/: Cargo.toml
crates/fsm-cli/src/: main.rs
crates/fsm-core/: Cargo.toml
crates/fsm-core/src/: lib.rs
crates/fsm-mount/: Cargo.toml  build.rs
crates/fsm-mount/src/: lib.rs  main.rs  unix.rs  win.rs
scripts/: build-installer.ps1  build-release.ps1  build-release.sh
