[workspace]
members = ["crates/fsm-core", "crates/fsm-cli"]
# Projetos Cargo próprios, fora do workspace:
#  - app Tauri (build via npm/tauri)
#  - fsm-mount: depende de winfsp (GPLv3) e exige libclang só no Windows; mantê-lo
#    fora evita acoplar `cargo test` do core ao libclang.
exclude = ["apps/fsm-desktop/src-tauri", "crates/fsm-mount"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
authors = ["RiseTec <ti@risetec.com.br>"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
zstd = "0.13"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
fastcdc = "3"
