[package]
name = "fsm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Motor do container virtual: object store endereçado por conteúdo, com dedup."

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
bincode.workspace = true
zstd.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
fastcdc.workspace = true
fs2 = "0.4"
