[package]
name = "fsm-desktop"
version = "0.1.0"
description = "fsmanager — UI desktop do gerenciador de container virtual"
authors = ["RiseTec <ti@risetec.com.br>"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fsm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Sem debug info: evita o limite de PDB do linker (LNK1140) e reduz muito o
# tamanho em disco do build (ambiente com pouco espaço livre).
[profile.dev]
debug = false
strip = "debuginfo"

[profile.dev.build-override]
debug = false

# Release otimizado para tamanho (disco apertado + binário de distribuição menor).
[profile.release]
strip = true
opt-level = "s"
lto = "thin"
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsm-core = { path = "../../../crates/fsm-core" }

